@startuml
[*] --> INICIO
INICIO --> CREAR_EMPLEADO : SOLICITAR_CREAR_EMPLEADO
CREAR_EMPLEADO --> EMPLEADO_CREADO : EMPLEADO_CREADO
EMPLEADO_CREADO --> CREAR_CONTRATO : SOLICITAR_CREAR_CONTRATO
CREAR_CONTRATO --> CONTRATO_CREADO : CONTRATO_CREADO
CONTRATO_CREADO --> FINALIZADA : FINALIZAR
FINALIZADA --> [*]
@enduml
